<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/conj_progress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:indeterminate="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/conj_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingTop="56dp"
        android:paddingBottom="16dp" />

    <RelativeLayout
        android:id="@+id/conj_switchBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/conj_switchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/conj_switch"
            android:text="@string/regular_forms"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/conj_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="false"
            android:theme="@style/HonorificSwitchStyle"/>
    </RelativeLayout>

</RelativeLayout>