<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".conjugator.ConjugatorActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/conjugator_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/conjugator_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="56dp">

                <TextView
                    android:id="@+id/conjugator_stemText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/possible_stems"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"/>

                <Spinner
                    android:id="@+id/conjugator_stemSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/conjugator_posText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/part_of_speech"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"/>

                <Spinner
                    android:id="@+id/conjugator_posSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/pos"/>

                <TextView
                    android:id="@+id/conjugator_regText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/regularity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"/>

                <Spinner
                    android:id="@+id/conjugator_regSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/regularity"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/conjugator_progress"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_below="@id/conjugator_linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:indeterminate="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/conjugator_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/conjugator_linearLayout"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingVertical="16dp" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/conjugator_switchBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/conjugator_switchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/conjugator_switch"
            android:text="@string/regular_forms"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/conjugator_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="false"
            android:theme="@style/HonorificSwitchStyle"/>
    </RelativeLayout>

</RelativeLayout>