...
    <string name="regular_forms">Regular Forms</string>
    <string name="menu_ad_free">Remove Ads</string>
    <string name="conj_seperator">:</string>
    <string name="empty_favorites">You don\'t have any favorites. Click on favorites in settings to make some.</string>
    <string name="wod_cant_connect">Can\'t connect to server</string>
    <!-- Suggestions -->
    <string name="suggestion_submit">Submit</string>
    <string name="menu_add">Add suggestion</string>
    <string name="suggestion_title">Enter at least one addition</string>
    <string name="suggestion_antonym">Antonym</string>
    <string name="suggestion_synonym">Synonym</string>
    <string name="suggestion_example_title">Example</string>
    <string name="suggestion_example_sentence">Korean sentence</string>
...
